--- a/term07/04-Russian Morphology/hw04.ipynb
+++ b/term07/04-Russian Morphology/hw04.ipynb
@@ -21,12 +21,124 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "b25c0978-4247-4846-bb52-dd5e6723d7b7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "preps = ['в', 'за', 'меж', 'между', 'на', 'о', 'об', 'обо', 'по', 'под', 'подо', 'с', 'со']\n",
+    "# в (во) — с вин. и предл. п., \n",
+    "# за — с вин. и тв. п., меж, между — с род. и тв. п., на — с вин. и предл. п., \n",
+    "# о (об, обо) — с вин. и предл. п., \n",
+    "# по — с дат., вин. и предл. п.,\n",
+    "# под (подо) — с вин. и тв. п., \n",
+    "# с (со) — с род., вин. и тв. п."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "694cdf38",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "path = os.path.abspath(os.path.join('..', '..', 'term06', 'BASE', '05-Matplotlib', 'three_comrades.txt'))\n",
+    "with open(path, 'r' , encoding='ANSI') as file:\n",
+    "    raw = file.read()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "7a4d7c80",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'в': {},\n",
+       " 'за': {},\n",
+       " 'меж': {},\n",
+       " 'между': {},\n",
+       " 'на': {},\n",
+       " 'о': {},\n",
+       " 'об': {},\n",
+       " 'обо': {},\n",
+       " 'по': {},\n",
+       " 'под': {},\n",
+       " 'подо': {},\n",
+       " 'с': {},\n",
+       " 'со': {}}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = dict()\n",
+    "for i in preps:\n",
+    "    data[i] = dict()\n",
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "48169dae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import spacy\n",
+    "\n",
+    "res = {'в': {'Acc': 0, 'Loc': 0},\n",
+    " 'за': {'Acc': 0, 'Ins': 0},\n",
+    " 'меж': {'Gen': 0, 'Ins': 0},\n",
+    " 'между': {'Gen': 0, 'Ins': 0},\n",
+    " 'на': {'Acc': 0, 'Loc': 0},\n",
+    " 'о': {'Acc': 0, 'Loc': 0},\n",
+    " 'об': {'Acc': 0, 'Loc': 0},\n",
+    " 'обо': {'Acc': 0, 'Loc': 0},\n",
+    " 'по': {'Dat': 0, 'Acc': 0, 'Loc': 0},\n",
+    " 'под': {'Acc': 0, 'Ins': 0},\n",
+    " 'подо': {'Acc': 0, 'Ins': 0},\n",
+    " 'с': {'Gen': 0, 'Ins': 0, 'Acc': 0},\n",
+    " 'со': {'Gen': 0, 'Ins': 0, 'Acc': 0}}\n",
+    "# Acc, Gen, Dat, Loc, Ins\n",
+    "nlp = spacy.load(\"ru_core_news_sm\")\n",
+    "doc = nlp(raw)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "83859b83",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'в': {'Acc': 418, 'Loc': 351}, 'за': {'Acc': 84, 'Ins': 58}, 'меж': {'Gen': 0, 'Ins': 0}, 'между': {'Gen': 1, 'Ins': 2}, 'на': {'Acc': 333, 'Loc': 230}, 'о': {'Acc': 0, 'Loc': 50}, 'об': {'Acc': 1, 'Loc': 3}, 'обо': {'Acc': 0, 'Loc': 0}, 'по': {'Dat': 190, 'Acc': 1, 'Loc': 0}, 'под': {'Acc': 17, 'Ins': 23}, 'подо': {'Acc': 0, 'Ins': 0}, 'с': {'Gen': 68, 'Ins': 208, 'Acc': 5}, 'со': {'Gen': 17, 'Ins': 14, 'Acc': 0}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i, token in enumerate(doc):\n",
+    "    if token.tag_ =='ADP':\n",
+    "        noun = i + 1\n",
+    "        if doc[noun].tag_ == 'NOUN' and token.text in res.keys():\n",
+    "            # print(doc[i+1].text)\n",
+    "            case = doc[i+1].morph.get('Case')[0]\n",
+    "            # print(case)\n",
+    "            # print(token.text)\n",
+    "            if case in res[token.text.lower()].keys():\n",
+    "                res[token.text.lower()][case] += 1\n",
+    "\n",
+    "print(res)\n"
    ]
   },
   {
@@ -46,13 +158,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "# а у меня уже там лемматизация была сделана.............."
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -66,7 +178,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
