--- a/term07/04-Russian Morphology/sem04.ipynb
+++ b/term07/04-Russian Morphology/sem04.ipynb
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "193116b5-7941-4eb2-870e-91c6598f1cc5",
    "metadata": {},
    "outputs": [],
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "bda8f1d7",
    "metadata": {},
    "outputs": [],
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "id": "b1123a1c",
    "metadata": {},
    "outputs": [
@@ -384,12 +384,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "f1c42e8a-8baf-4205-b496-006c09acac0f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Прилагательных перед существительным: 3513\n",
+      "Прилагательных до существительного: 723\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "before = 0\n",
+    "after = 0\n",
+    "\n",
+    "noun_tokens = list()\n",
+    "for i, token in enumerate(doc2):\n",
+    "    if token.tag_ == 'NOUN':\n",
+    "        noun_tokens.append(i)\n",
+    "\n",
+    "for noun in noun_tokens:\n",
+    "    while doc2[noun - 1].tag_ == 'ADJ':\n",
+    "        before += 1\n",
+    "        noun -= 1\n",
+    "    while doc2[noun + 1].tag_ == 'ADJ':\n",
+    "        after += 1\n",
+    "        noun += 1\n",
+    "\n",
+    "print(f'Прилагательных перед существительным: {before}\\nПрилагательных до существительного: {after}')"
    ]
   },
   {
