--- a/term07/03-NLTK/hw03.ipynb
+++ b/term07/03-NLTK/hw03.ipynb
@@ -16,18 +16,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "ee0d87db-02b2-4932-aa74-75a2808f7479",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "theoretical_linguistics\n"
+     ]
+    }
+   ],
+   "source": [
+    "from nltk.corpus import stopwords\n",
+    "from nltk.tokenize import word_tokenize\n",
+    "from nltk.stem import WordNetLemmatizer\n",
+    "import os\n",
+    "\n",
+    "def lemmatize(text):\n",
+    "    lemmatizer = WordNetLemmatizer()\n",
+    "    stop_words = set(stopwords.words('russian'))\n",
+    "    word_tokens = word_tokenize(text)\n",
+    "    filtered_tokens = [w for w in word_tokens if not w.lower() in stop_words]\n",
+    "    res = list()\n",
+    "    for token in filtered_tokens:\n",
+    "        res.append(lemmatizer.lemmatize(token))\n",
+    "    return set(res)\n",
+    "\n",
+    "\n",
+    "total_data = dict()\n",
+    "data = os.listdir('files')\n",
+    "for file in data:\n",
+    "    path = 'files/' + file\n",
+    "    with open(path, 'r', encoding='utf8') as textfile:\n",
+    "        raw = ''\n",
+    "        # print(file)\n",
+    "        for line in textfile:\n",
+    "            raw += line\n",
+    "        total_data[file[:-4]] = lemmatize(raw)\n",
+    "\n",
+    "new_file = 'what type.txt'\n",
+    "with open(new_file, 'r', encoding='utf8') as textfile:\n",
+    "        raw = ''\n",
+    "        for line in textfile:\n",
+    "            raw += line\n",
+    "        new_file_tokens = lemmatize(raw)\n",
+    "\n",
+    "intersection_result = dict()\n",
+    "for i_data, text in total_data.items():\n",
+    "     inter = text & new_file_tokens\n",
+    "     intersection_result[i_data] = inter\n",
+    "\n",
+    "max = 0\n",
+    "for theme, intersec in intersection_result.items():\n",
+    "     if len(intersec) > max:\n",
+    "          max = len(intersec)\n",
+    "          new_file_theme = theme\n",
+    "\n",
+    "print(new_file_theme)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f42696c9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "#все так, новый файл - теор глава чьего-то курсача с прошлого года)) "
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -41,7 +104,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
