--- a/term07/06-Sound/sem06.ipynb
+++ b/term07/06-Sound/sem06.ipynb
@@ -17,7 +17,131 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "from gtts import gTTS, lang\n",
+    "\n",
+    "lang_dict = lang.tts_langs(\n",
+    "language = input('write language: ').capitalize()\n",
+    "text = input('write ur text: ')\n",
+    "data = dict()\n",
+    "\n",
+    "for key, value in lang_dict.items():\n",
+    "    data[value] = key\n",
+    "\n",
+    "tts = gTTS(text, lang=data[language])\n",
+    "tts.save('audio_task1.mp3')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "78136851",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'af': 'Afrikaans',\n",
+       " 'am': 'Amharic',\n",
+       " 'ar': 'Arabic',\n",
+       " 'bg': 'Bulgarian',\n",
+       " 'bn': 'Bengali',\n",
+       " 'bs': 'Bosnian',\n",
+       " 'ca': 'Catalan',\n",
+       " 'cs': 'Czech',\n",
+       " 'cy': 'Welsh',\n",
+       " 'da': 'Danish',\n",
+       " 'de': 'German',\n",
+       " 'el': 'Greek',\n",
+       " 'en': 'English',\n",
+       " 'es': 'Spanish',\n",
+       " 'et': 'Estonian',\n",
+       " 'eu': 'Basque',\n",
+       " 'fi': 'Finnish',\n",
+       " 'fr': 'French',\n",
+       " 'fr-CA': 'French (Canada)',\n",
+       " 'gl': 'Galician',\n",
+       " 'gu': 'Gujarati',\n",
+       " 'ha': 'Hausa',\n",
+       " 'hi': 'Hindi',\n",
+       " 'hr': 'Croatian',\n",
+       " 'hu': 'Hungarian',\n",
+       " 'id': 'Indonesian',\n",
+       " 'is': 'Icelandic',\n",
+       " 'it': 'Italian',\n",
+       " 'iw': 'Hebrew',\n",
+       " 'ja': 'Japanese',\n",
+       " 'jw': 'Javanese',\n",
+       " 'km': 'Khmer',\n",
+       " 'kn': 'Kannada',\n",
+       " 'ko': 'Korean',\n",
+       " 'la': 'Latin',\n",
+       " 'lt': 'Lithuanian',\n",
+       " 'lv': 'Latvian',\n",
+       " 'ml': 'Malayalam',\n",
+       " 'mr': 'Marathi',\n",
+       " 'ms': 'Malay',\n",
+       " 'my': 'Myanmar (Burmese)',\n",
+       " 'ne': 'Nepali',\n",
+       " 'nl': 'Dutch',\n",
+       " 'no': 'Norwegian',\n",
+       " 'pa': 'Punjabi (Gurmukhi)',\n",
+       " 'pl': 'Polish',\n",
+       " 'pt': 'Portuguese (Brazil)',\n",
+       " 'pt-PT': 'Portuguese (Portugal)',\n",
+       " 'ro': 'Romanian',\n",
+       " 'ru': 'Russian',\n",
+       " 'si': 'Sinhala',\n",
+       " 'sk': 'Slovak',\n",
+       " 'sq': 'Albanian',\n",
+       " 'sr': 'Serbian',\n",
+       " 'su': 'Sundanese',\n",
+       " 'sv': 'Swedish',\n",
+       " 'sw': 'Swahili',\n",
+       " 'ta': 'Tamil',\n",
+       " 'te': 'Telugu',\n",
+       " 'th': 'Thai',\n",
+       " 'tl': 'Filipino',\n",
+       " 'tr': 'Turkish',\n",
+       " 'uk': 'Ukrainian',\n",
+       " 'ur': 'Urdu',\n",
+       " 'vi': 'Vietnamese',\n",
+       " 'yue': 'Cantonese',\n",
+       " 'zh-CN': 'Chinese (Simplified)',\n",
+       " 'zh-TW': 'Chinese (Mandarin/Taiwan)',\n",
+       " 'zh': 'Chinese (Mandarin)'}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import gtts\n",
+    "\n",
+    "gtts.lang.tts_langs()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "1d0bdd12",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Afrikaans': 'af', 'Amharic': 'am', 'Arabic': 'ar', 'Bulgarian': 'bg', 'Bengali': 'bn', 'Bosnian': 'bs', 'Catalan': 'ca', 'Czech': 'cs', 'Welsh': 'cy', 'Danish': 'da', 'German': 'de', 'Greek': 'el', 'English': 'en', 'Spanish': 'es', 'Estonian': 'et', 'Basque': 'eu', 'Finnish': 'fi', 'French': 'fr', 'French (Canada)': 'fr-CA', 'Galician': 'gl', 'Gujarati': 'gu', 'Hausa': 'ha', 'Hindi': 'hi', 'Croatian': 'hr', 'Hungarian': 'hu', 'Indonesian': 'id', 'Icelandic': 'is', 'Italian': 'it', 'Hebrew': 'iw', 'Japanese': 'ja', 'Javanese': 'jw', 'Khmer': 'km', 'Kannada': 'kn', 'Korean': 'ko', 'Latin': 'la', 'Lithuanian': 'lt', 'Latvian': 'lv', 'Malayalam': 'ml', 'Marathi': 'mr', 'Malay': 'ms', 'Myanmar (Burmese)': 'my', 'Nepali': 'ne', 'Dutch': 'nl', 'Norwegian': 'no', 'Punjabi (Gurmukhi)': 'pa', 'Polish': 'pl', 'Portuguese (Brazil)': 'pt', 'Portuguese (Portugal)': 'pt-PT', 'Romanian': 'ro', 'Russian': 'ru', 'Sinhala': 'si', 'Slovak': 'sk', 'Albanian': 'sq', 'Serbian': 'sr', 'Sundanese': 'su', 'Swedish': 'sv', 'Swahili': 'sw', 'Tamil': 'ta', 'Telugu': 'te', 'Thai': 'th', 'Filipino': 'tl', 'Turkish': 'tr', 'Ukrainian': 'uk', 'Urdu': 'ur', 'Vietnamese': 'vi', 'Cantonese': 'yue', 'Chinese (Simplified)': 'zh-CN', 'Chinese (Mandarin/Taiwan)': 'zh-TW', 'Chinese (Mandarin)': 'zh'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from gtts import gTTS, lang\n",
+    "\n",
+    "lang_dict = lang.tts_langs()\n",
+    "data = {value: key for key, value in lang_dict.items()}\n",
+    "print(data)"
    ]
   },
   {
@@ -38,12 +162,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
+   "id": "c0eb71ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ".mp3\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('papa.mp3'[-4:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "id": "b100e689-e107-4d90-a7ed-9347af7b6ecb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bonjour je m'appelle Célia et je voudrais mourir\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "import speech_recognition as sr\n",
+    "from pydub import AudioSegment\n",
+    "# import os\n",
+    "\n",
+    "files = input('write path to the file: ')\n",
+    "language2 = input('write ur language: ').capitalize()\n",
+    "\n",
+    "AUDIO_FILE = files # путь к файлу-источнику\n",
+    "\n",
+    "r = sr.Recognizer()\n",
+    "with sr.AudioFile(AUDIO_FILE) as source:\n",
+    "    audio = r.record(source)  # читает файл в свой внутренний формат\n",
+    "\n",
+    "try:\n",
+    "    print(r.recognize_google(audio, language=data[language2])) \n",
+    "except sr.UnknownValueError:\n",
+    "    print(\"Google Speech Recognition не справился\")\n",
+    "except sr.RequestError as e:\n",
+    "    print(f\"Ошибка запроса: {e}\")\n"
    ]
   },
   {
@@ -91,7 +259,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -105,7 +273,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
