--- a/term07/07-Stats/sem07.ipynb
+++ b/term07/07-Stats/sem07.ipynb
@@ -28,12 +28,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "17d65f8c-4208-4a68-9c5a-1f0abdaddb78",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Принц Джоффри НЕ выше, чем в среднем семья Старков.\n",
+      "Принц Джоффри НЕ выше, чем средний Старк.\n",
+      "Принц Джоффри НЕ выше, чем самый частый рост в роду Старков.\n",
+      "Принц Джоффри выше, чем в среднем семья Старков.\n",
+      "Принц Джоффри НЕ выше, чем средний Старк.\n",
+      "Принц Джоффри НЕ выше, чем самый частый рост в роду Старков.\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "import statistics\n",
+    "\n",
+    "\n",
+    "def compare(data):\n",
+    "    joffry = 169\n",
+    "    if joffry > data:\n",
+    "        print('Принц Джоффри выше, ', end='')\n",
+    "    else:\n",
+    "        print('Принц Джоффри НЕ выше, ', end='')\n",
+    "\n",
+    "\n",
+    "def comparison(stark):\n",
+    "    stark_mean = statistics.mean(stark)\n",
+    "    compare(stark_mean)\n",
+    "    print('чем в среднем семья Старков.')\n",
+    "    stark_median = statistics.median(stark)\n",
+    "    compare(stark_median)\n",
+    "    print('чем средний Старк.')\n",
+    "    stark_mode = statistics.mode(stark)\n",
+    "    compare(stark_mode)\n",
+    "    print('чем самый частый рост в роду Старков.')\n",
+    "\n",
+    "stark_family = [192, 178, 188, 180, 170, 165, 145, 139, 180]\n",
+    "comparison(stark_family)\n",
+    "stark_family.append(115)\n",
+    "comparison(stark_family)\n",
+    "\n"
    ]
   },
   {
@@ -58,12 +97,312 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "bb657a29-fb3b-43a2-9d3f-904c9ed2f3d1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TtestResult(statistic=np.float64(-1.561819899861046), pvalue=np.float64(0.12377076011758885), df=np.float64(58.0))"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "import pandas as pd\n",
+    "from scipy. stats import ttest_ind\n",
+    "\n",
+    "zhzh_data = [1262, 435, 1476, 459, 809, 420, 1236, 642, 147, 652, 984, 10058, 351, 1313, 362, 1396, 1220, 1587, 1471, 1208, 951, 225, 935, 1381, 749, 786, 1380, 658, 66, 892]\n",
+    "zhz_data = [2946, 2, 1321, 884, 2563, 372, 540, 229, 2643, 2737, 1390, 2813, 3122, 2177, 1295, 2570, 2969, 2806, 355, 2925, 167, 2203, 1438, 1804, 1426, 1261, 2222, 2241, 2150, 984]\n",
+    "\n",
+    "df = pd.DataFrame({'method': ['A', 'A', 'A', 'A', 'A', 'A', 'A', 'A', 'A', 'A', 'A', 'A', 'A', 'A', 'A', 'A', 'A', 'A', 'A', 'A', 'A', 'A', 'A', 'A', 'A', 'A', 'A', 'A', 'A', 'A',\n",
+    " 'B', 'B', 'B', 'B', 'B', 'B', 'B', 'B', 'B', 'B', 'B', 'B', 'B', 'B', 'B', 'B', 'B', 'B', 'B', 'B', 'B', 'B', 'B', 'B', 'B', 'B', 'B', 'B', 'B', 'B'],\n",
+    " 'score': [1262, 435, 1476, 459, 809, 420, 1236, 642, 147, 652, 984, 10058, 351, 1313, 362, 1396, 1220, 1587, 1471, 1208, 951, 225, 935, 1381, 749, 786, 1380, 658, 66, 892,\n",
+    " 2946, 2, 1321, 884, 2563, 372, 540, 229, 2643, 2737, 1390, 2813, 3122, 2177, 1295, 2570, 2969, 2806, 355, 2925, 167, 2203, 1438, 1804, 1426, 1261, 2222, 2241, 2150, 984]})\n",
+    "\n",
+    "group1 = df[df['method']=='A']\n",
+    "group2 = df[df['method']=='B']\n",
+    "\n",
+    "ttest_ind(group1['score'], group2['score'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "e9c43222",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MannwhitneyuResult(statistic=np.float64(239.5), pvalue=np.float64(0.0019042544650607648))"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import scipy.stats as stats\n",
+    "\n",
+    "stats.mannwhitneyu(zhzh_data, zhz_data, alternative='two-sided')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "b595f788",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>method</th>\n",
+       "      <th>score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>A</td>\n",
+       "      <td>1262</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>A</td>\n",
+       "      <td>435</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>A</td>\n",
+       "      <td>1476</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>A</td>\n",
+       "      <td>459</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>A</td>\n",
+       "      <td>809</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>A</td>\n",
+       "      <td>420</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>A</td>\n",
+       "      <td>1236</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>A</td>\n",
+       "      <td>642</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>A</td>\n",
+       "      <td>147</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>A</td>\n",
+       "      <td>652</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>A</td>\n",
+       "      <td>984</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>A</td>\n",
+       "      <td>10058</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>A</td>\n",
+       "      <td>351</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>A</td>\n",
+       "      <td>1313</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>A</td>\n",
+       "      <td>362</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>A</td>\n",
+       "      <td>1396</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>A</td>\n",
+       "      <td>1220</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>A</td>\n",
+       "      <td>1587</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>A</td>\n",
+       "      <td>1471</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>A</td>\n",
+       "      <td>1208</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>A</td>\n",
+       "      <td>951</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>A</td>\n",
+       "      <td>225</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>A</td>\n",
+       "      <td>935</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>A</td>\n",
+       "      <td>1381</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>A</td>\n",
+       "      <td>749</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>A</td>\n",
+       "      <td>786</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>A</td>\n",
+       "      <td>1380</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>A</td>\n",
+       "      <td>658</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>A</td>\n",
+       "      <td>66</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>A</td>\n",
+       "      <td>892</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   method  score\n",
+       "0       A   1262\n",
+       "1       A    435\n",
+       "2       A   1476\n",
+       "3       A    459\n",
+       "4       A    809\n",
+       "5       A    420\n",
+       "6       A   1236\n",
+       "7       A    642\n",
+       "8       A    147\n",
+       "9       A    652\n",
+       "10      A    984\n",
+       "11      A  10058\n",
+       "12      A    351\n",
+       "13      A   1313\n",
+       "14      A    362\n",
+       "15      A   1396\n",
+       "16      A   1220\n",
+       "17      A   1587\n",
+       "18      A   1471\n",
+       "19      A   1208\n",
+       "20      A    951\n",
+       "21      A    225\n",
+       "22      A    935\n",
+       "23      A   1381\n",
+       "24      A    749\n",
+       "25      A    786\n",
+       "26      A   1380\n",
+       "27      A    658\n",
+       "28      A     66\n",
+       "29      A    892"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "group1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "4b9e3044",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n",
+      "['B', 'B', 'B', 'B', 'B', 'B', 'B', 'B', 'B', 'B', 'B', 'B', 'B', 'B', 'B', 'B', 'B', 'B', 'B', 'B', 'B', 'B', 'B', 'B', 'B', 'B', 'B', 'B', 'B', 'B']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len([2946, 2, 1321, 884, 2563, 372, 540, 229, 2643, 2737, 1390, 2813, 3122, 2177, 1295, 2570, 2969, 2806, 355, 2925, 167, 2203, 1438, 1804, 1426, 1261, 2222, 2241, 2150, 984]))\n",
+    "ar = []\n",
+    "for i in range(30):\n",
+    "    ar.append('B')\n",
+    "print(ar)"
    ]
   },
   {
@@ -86,9 +425,46 @@
    "execution_count": null,
    "id": "54af18e6-5a63-4182-8ddd-3079df8ca451",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TtestResult(statistic=np.float64(0.7766431633476234), pvalue=np.float64(0.4469309163922225), df=np.int64(19))"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "import scipy.stats as stats\n",
+    "\n",
+    "first_lang = [5, 5, 4, 2, 1, 4, 1, 2, 5, 2, 5, 3, 2, 4, 5, 0, 0, 3, 2, 0]\n",
+    "biling = [4, 2, 5, 1, 0, 3, 2, 3, 4, 1, 5, 2, 3, 5, 4, 1, 0, 4, 1, 1]\n",
+    "\n",
+    "stats.mannwhitneyu(first_lang, biling, alternative='two-sided')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "5434b095",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TtestResult(statistic=np.float64(0.364032438651536), pvalue=np.float64(0.7178515592485919), df=np.float64(38.0))"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ttest_ind(first_lang, biling)"
    ]
   },
   {
@@ -110,18 +486,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "a3a08d62-6ac7-4069-b9b4-f26710391b42",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PearsonRResult(statistic=np.float64(-0.7727060575970576), pvalue=np.float64(6.510320278282287e-05))"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "import scipy.stats as stats\n",
+    "\n",
+    "age = [42, 21, 32, 55, 43, 54, 38, 53, 53, 25, 56, 23, 40, 61, 20, 48, 23, 50, 22, 39]\n",
+    "freq = [4, 12, 9, 1, 8, 0, 3, 0, 1, 10, 11, 5, 6, 0, 13, 2, 14, 0, 12, 5]\n",
+    "\n",
+    "stats.pearsonr(age, freq)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -135,7 +527,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
